# Pitao

module-00/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py  ft_harvest_total.py  ft_plot_area.py  ft_seed_inventory.py
module-00/ex2/: ft_plot_area.py
module-00/ex3/: ft_harvest_total.py
module-00/ex6/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
module-00/ex7/: ft_seed_inventory.py
module-01/: ft_garden_analytics.py  ft_garden_data.py  ft_garden_intro.py  ft_garden_security.py  ft_plant_factory.py  ft_plant_growth.py  ft_plant_types.py
module-01/ex0/: ft_garden_intro.py
module-01/ex1/: ft_garden_data.py
module-01/ex2/: ft_plant_growth.py
module-01/ex3/: ft_plant_factory.py
module-02/: ft_custom_errors.py  ft_different_errors.py  ft_finally_block.py  ft_first_exception.py  ft_raise_exception.py
module-03/: ft_achievement_tracker.py  ft_command_quest.py  ft_coordinate_system.py  ft_data_alchemist.py  ft_data_stream.py  ft_inventory_system.py  ft_score_analytics.py
module-04/: ft_ancient_text.py  ft_archive_creation.py  ft_stream_management.py  ft_vault_security.py
module-05/: code_nexus_guide.html  data_pipeline.py  data_processor.py  data_stream.py
module-06/: elements.py  ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
module-07/: battle.py  capacitor.py  tournament.py
module-08/ex1/: loading.py  pyproject.toml
(+38 files in other folders)
