[tool.poetry]
name = "loading"
version = "1.0.0"
description = "Matrix data analysis - Exercise 1"
authors = ["gopiment"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26"
pandas = "^2.2"
matplotlib = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry-core.masonry.api"